--- a/kan's_log_system/src/application/Mainmenu.fxml
+++ b/kan's_log_system/src/application/Mainmenu.fxml
@@ -4,18 +4,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="424.0"
-	prefWidth="637.0" xmlns="http://javafx.com/javafx/10.0.1"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="application.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="424.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
 	<children>
-		<ImageView fitHeight="95.0" fitWidth="85.0" layoutX="266.0"
-			layoutY="162.0" onMouseClicked="#onButtonLoan" pickOnBounds="true"
-			preserveRatio="true">
+		<ImageView fitHeight="45.0" fitWidth="49.0" layoutX="266.0" layoutY="162.0" onMouseClicked="#onButtonLoan" pickOnBounds="true" preserveRatio="true">
 			<image>
-				<Image
-					url="@../../../../../Users/sato/Pictures/icon/Loan.jpeg" />
+				<Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px_1.png" />
 			</image>
 		</ImageView>
 	</children>
