--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -17,8 +17,8 @@
 	<items>
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="283.0" prefWidth="598.0">
 			<children>
-				<TextField layoutX="189.0" layoutY="239.0" prefHeight="26.0" prefWidth="183.0" />
-				<TextArea layoutX="55.0" layoutY="80.0" prefHeight="95.0" prefWidth="453.0" />
+				<TextField disable="true" layoutX="189.0" layoutY="239.0" prefHeight="26.0" prefWidth="183.0" />
+				<TextArea disable="true" layoutX="55.0" layoutY="80.0" prefHeight="95.0" prefWidth="453.0" text="ww" />
 				<Text layoutX="14.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
 					<font>
 						<Font size="62.0" />
@@ -31,12 +31,12 @@
 				</Text>
 				<Button layoutX="379.0" layoutY="239.0" mnemonicParsing="false" text="返済" />
 				<Button layoutX="429.0" layoutY="240.0" mnemonicParsing="false" text="入金" />
-				<ChoiceBox fx:id="loan_year" layoutX="57.0" layoutY="239.0" prefHeight="26.0" prefWidth="40.0" />
-				<ChoiceBox fx:id="loan_month" layoutX="120.0" layoutY="239.0" prefHeight="26.0" prefWidth="40.0" />
+				<ChoiceBox fx:id="loan_year" layoutX="34.0" layoutY="239.0" prefHeight="26.0" prefWidth="58.0" />
+				<ChoiceBox fx:id="loan_month" layoutX="116.0" layoutY="239.0" prefHeight="26.0" prefWidth="40.0" />
 				<Text layoutX="97.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
 				<Text layoutX="160.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
 				<Button layoutX="476.0" layoutY="239.0" mnemonicParsing="false" text="取消" />
-				<TextField layoutX="187.0" layoutY="189.0" prefHeight="26.0" prefWidth="183.0" />
+				<TextField disable="true" layoutX="187.0" layoutY="189.0" prefHeight="26.0" prefWidth="183.0" />
 				<Text layoutX="100.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
             <ImageView layoutX="96.0" layoutY="24.0">
                <image>
