6/6 tableViewのイニシャライズ成功！

--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -47,12 +47,12 @@
 		</AnchorPane>
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="248.0" prefWidth="598.0">
 			<children>
-				<TableView layoutX="-1.0" prefHeight="399.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+				<TableView fx:id="repayment_balance" layoutX="-1.0" prefHeight="399.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 					<columns>
-						<TableColumn prefWidth="112.0" text="日時" />
-						<TableColumn prefWidth="165.0" text="返済額" />
-						<TableColumn prefWidth="142.0" text="口座入金額" />
-						<TableColumn prefWidth="178.0" text="口座残高" />
+						<TableColumn fx:id="loan_date" prefWidth="112.0" text="日時" />
+						<TableColumn fx:id="repaid_amount" prefWidth="165.0" text="返済額" />
+						<TableColumn fx:id="deposit_amount" prefWidth="142.0" text="口座入金額" />
+						<TableColumn fx:id="balance" prefWidth="178.0" text="口座残高" />
 					</columns>
 				</TableView>
 			</children>
