--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -18,8 +18,7 @@
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="283.0" prefWidth="598.0">
 			<children>
 				<TextField disable="true" layoutX="189.0" layoutY="239.0" prefHeight="26.0" prefWidth="183.0" />
-				<TextArea disable="true" layoutX="55.0" layoutY="80.0" prefHeight="95.0" prefWidth="453.0" text="ww" />
-				<Text layoutX="14.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
+				<Text layoutX="34.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
 					<font>
 						<Font size="62.0" />
 					</font>
@@ -43,6 +42,7 @@
                   <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
                </image>
             </ImageView>
+            <Label fx:id="debt_balance" layoutX="165.0" layoutY="117.0" prefHeight="18.0" prefWidth="242.0" text="Label" />
 			</children>
 		</AnchorPane>
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="248.0" prefWidth="598.0">
