--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -17,7 +16,7 @@
 	<items>
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="283.0" prefWidth="598.0">
 			<children>
-				<TextField disable="true" layoutX="189.0" layoutY="239.0" prefHeight="26.0" prefWidth="183.0" />
+				<TextField fx:id="money" layoutX="189.0" layoutY="239.0" prefHeight="26.0" prefWidth="183.0" />
 				<Text layoutX="34.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
 					<font>
 						<Font size="62.0" />
@@ -28,21 +27,29 @@
 						<Font size="46.0" />
 					</font>
 				</Text>
-				<Button layoutX="379.0" layoutY="239.0" mnemonicParsing="false" text="返済" />
+				<Button fx:id="btn_repayment" layoutX="379.0" layoutY="239.0" mnemonicParsing="false" onAction="#onBtn_reoayment" text="返済" />
 				<Button layoutX="429.0" layoutY="240.0" mnemonicParsing="false" text="入金" />
 				<ChoiceBox fx:id="loan_year" layoutX="34.0" layoutY="239.0" prefHeight="26.0" prefWidth="58.0" />
 				<ChoiceBox fx:id="loan_month" layoutX="116.0" layoutY="239.0" prefHeight="26.0" prefWidth="40.0" />
 				<Text layoutX="97.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
 				<Text layoutX="160.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
 				<Button layoutX="476.0" layoutY="239.0" mnemonicParsing="false" text="取消" />
-				<TextField disable="true" layoutX="187.0" layoutY="189.0" prefHeight="26.0" prefWidth="183.0" />
 				<Text layoutX="100.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
             <ImageView layoutX="96.0" layoutY="24.0">
                <image>
                   <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
                </image>
             </ImageView>
-            <Label fx:id="debt_balance" layoutX="165.0" layoutY="117.0" prefHeight="18.0" prefWidth="242.0" text="Label" />
+            <Text fx:id="debt_balance" layoutX="113.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="320.857421875">
+               <font>
+                  <Font size="46.0" />
+               </font>
+            </Text>
+            <Text fx:id="lst_balance" layoutX="172.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="266.97069704532623">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Text>
 			</children>
 		</AnchorPane>
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="248.0" prefWidth="598.0">
