--- a/kan's_log_system/src/application/Mainmenu.fxml
+++ b/kan's_log_system/src/application/Mainmenu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -8,8 +9,11 @@
 	<children>
 		<ImageView fitHeight="45.0" fitWidth="49.0" layoutX="266.0" layoutY="162.0" onMouseClicked="#onButtonLoan" pickOnBounds="true" preserveRatio="true">
 			<image>
-				<Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px_1.png" />
+				<Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
 			</image>
+         <effect>
+            <Glow />
+         </effect>
 		</ImageView>
 	</children>
 </Pane>
