--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -18,7 +18,7 @@
 	<items>
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="762.0" prefWidth="615.0">
 			<children>
-				<TextField id="txtfieldMoney" fx:id="money" layoutX="122.0" layoutY="273.0" onKeyPressed="#onKyPrsMoney" prefHeight="39.0" prefWidth="295.0" promptText="tityi" />
+				<TextField id="txtfieldMoney" fx:id="money" layoutX="122.0" layoutY="273.0" onKeyPressed="#onKyPrsMoney" prefHeight="39.0" prefWidth="295.0" />
 				<Text layoutX="34.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
 					<font>
 						<Font size="62.0" />
@@ -34,35 +34,40 @@
 				<ChoiceBox fx:id="loan_month" layoutX="204.0" layoutY="240.0" prefHeight="26.0" prefWidth="40.0" />
 				<Text layoutX="185.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
 				<Text layoutX="248.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
-				<Button layoutX="375.0" layoutY="318.0" mnemonicParsing="false" text="取消" />
+				<Button fx:id="delete" layoutX="375.0" layoutY="318.0" mnemonicParsing="false" onAction="#onBtn_delete" text="取消" />
 				<Text layoutX="122.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
             <ImageView layoutX="96.0" layoutY="24.0">
                <image>
                   <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
                </image>
             </ImageView>
-            <Text fx:id="debt_balance" layoutX="113.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="320.857421875">
+            <Text fx:id="debt_balance" layoutX="113.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="text" textAlignment="CENTER" wrappingWidth="320.857421875">
                <font>
                   <Font size="46.0" />
                </font>
             </Text>
-            <Text fx:id="lst_balance" layoutX="207.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="234.97069704532623">
+            <Text fx:id="lst_balance" layoutX="207.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="txt" textAlignment="CENTER" wrappingWidth="234.97069704532623">
                <font>
                   <Font size="23.0" />
                </font>
             </Text>
-            <RadioButton fx:id="radiopay" layoutX="427.0" layoutY="272.0" mnemonicParsing="false" selected="true" text="返済">
+            <RadioButton fx:id="radiopay" layoutX="427.0" layoutY="272.0" mnemonicParsing="false" onAction="#onAct_radiopay" selected="true" text="返済">
                <toggleGroup>
                   <ToggleGroup fx:id="group" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="radiodepo" layoutX="427.0" layoutY="294.0" mnemonicParsing="false" text="口座入金" toggleGroup="$group" />
-            <Button layoutX="272.0" layoutY="241.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="143.0" text="固定返済金額設定" />
+            <RadioButton fx:id="radiodepo" layoutX="427.0" layoutY="294.0" mnemonicParsing="false" onAction="#onAct_radiodepo" text="口座入金" toggleGroup="$group" />
+            <Button fx:id="fixed_money" layoutX="272.0" layoutY="241.0" mnemonicParsing="false" onAction="#onBtn_fixed_money" prefHeight="25.0" prefWidth="143.0" text="固定返済金額設定" />
             <Text layoutX="77.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
                <font>
                   <Font size="31.0" />
                </font>
             </Text>
+            <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="421.0" layoutY="241.0">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
+               </image>
+            </ImageView>
 			</children>
 		</AnchorPane>
 		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="615.0">
