--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -14,73 +14,77 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.47780678851174935" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="768.0" prefWidth="617.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoanController">
-	<items>
-		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="762.0" prefWidth="615.0">
-			<children>
-				<TextField id="txtfieldMoney" fx:id="money" layoutX="122.0" layoutY="273.0" onKeyPressed="#onKyPrsMoney" prefHeight="39.0" prefWidth="295.0" />
-				<Text layoutX="34.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
-					<font>
-						<Font size="62.0" />
-					</font>
-				</Text>
-				<Text layoutX="140.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Loan balance">
-					<font>
-						<Font size="46.0" />
-					</font>
-				</Text>
-				<Button fx:id="btn_repayment" layoutX="324.0" layoutY="318.0" mnemonicParsing="false" onAction="#onBtn_reoayment" text="登録" />
-				<ChoiceBox fx:id="loan_year" layoutX="122.0" layoutY="240.0" prefHeight="26.0" prefWidth="58.0" />
-				<ChoiceBox fx:id="loan_month" layoutX="204.0" layoutY="240.0" prefHeight="26.0" prefWidth="40.0" />
-				<Text layoutX="185.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
-				<Text layoutX="248.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
-				<Button fx:id="delete" layoutX="375.0" layoutY="318.0" mnemonicParsing="false" onAction="#onBtn_delete" text="取消" />
-				<Text layoutX="122.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
-            <ImageView layoutX="96.0" layoutY="24.0">
-               <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
-               </image>
-            </ImageView>
-            <Text fx:id="debt_balance" layoutX="113.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="text" textAlignment="CENTER" wrappingWidth="320.857421875">
-               <font>
-                  <Font size="46.0" />
-               </font>
-            </Text>
-            <Text fx:id="lst_balance" layoutX="207.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="txt" textAlignment="CENTER" wrappingWidth="234.97069704532623">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </Text>
-            <RadioButton fx:id="radiopay" layoutX="427.0" layoutY="272.0" mnemonicParsing="false" onAction="#onAct_radiopay" selected="true" text="返済">
-               <toggleGroup>
-                  <ToggleGroup fx:id="group" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="radiodepo" layoutX="427.0" layoutY="294.0" mnemonicParsing="false" onAction="#onAct_radiodepo" text="口座入金" toggleGroup="$group" />
-            <Button fx:id="fixed_money" layoutX="272.0" layoutY="241.0" mnemonicParsing="false" onAction="#onBtn_fixed_money" prefHeight="25.0" prefWidth="143.0" text="固定返済金額設定" />
-            <Text layoutX="77.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
-               <font>
-                  <Font size="31.0" />
-               </font>
-            </Text>
-            <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="421.0" layoutY="241.0">
-               <image>
-                  <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
-               </image>
-            </ImageView>
-			</children>
-		</AnchorPane>
-		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="403.0" prefWidth="615.0">
-			<children>
-				<TableView fx:id="repayment_balance" layoutX="-1.0" prefHeight="327.0" prefWidth="615.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-					<columns>
-						<TableColumn fx:id="loan_date" prefWidth="112.0" text="日時" />
-						<TableColumn fx:id="repaid_amount" prefWidth="165.0" text="返済額" />
-						<TableColumn fx:id="deposit_amount" prefWidth="142.0" text="口座入金額" />
-						<TableColumn fx:id="balance" prefWidth="195.0" text="口座残高" />
-					</columns>
-				</TableView>
-			</children>
-		</AnchorPane>
-	</items>
-</SplitPane>
+<AnchorPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoanController">
+   <children>
+      <SplitPane dividerPositions="0.5629032258064516" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="622.0" prefWidth="847.0">
+         <items>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="331.0" prefWidth="812.0">
+               <children>
+                  <TextField id="txtfieldMoney" fx:id="money" layoutX="235.0" layoutY="250.0" onKeyPressed="#onKyPrsMoney" prefHeight="39.0" prefWidth="295.0" />
+                  <Text layoutX="147.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
+                     <font>
+                        <Font size="62.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="253.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Loan balance">
+                     <font>
+                        <Font size="46.0" />
+                     </font>
+                  </Text>
+                  <Button fx:id="btn_repayment" layoutX="437.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_reoayment" text="登録" />
+                  <ChoiceBox fx:id="loan_year" layoutX="235.0" layoutY="217.0" prefHeight="26.0" prefWidth="58.0" />
+                  <ChoiceBox fx:id="loan_month" layoutX="317.0" layoutY="217.0" prefHeight="26.0" prefWidth="40.0" />
+                  <Text layoutX="298.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
+                  <Text layoutX="361.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
+                  <Button fx:id="delete" layoutX="488.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_delete" text="取消" />
+                  <Text layoutX="235.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
+                  <ImageView layoutX="209.0" layoutY="24.0">
+                     <image>
+                        <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
+                     </image>
+                  </ImageView>
+                  <Text fx:id="debt_balance" layoutX="226.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="text" textAlignment="CENTER" wrappingWidth="320.857421875">
+                     <font>
+                        <Font size="46.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="lst_balance" layoutX="320.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" text="txt" textAlignment="CENTER" wrappingWidth="234.97069704532623">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Text>
+                  <RadioButton fx:id="radiopay" layoutX="540.0" layoutY="249.0" mnemonicParsing="false" onAction="#onAct_radiopay" selected="true" text="返済">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="group" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="radiodepo" layoutX="540.0" layoutY="271.0" mnemonicParsing="false" onAction="#onAct_radiodepo" text="口座入金" toggleGroup="$group" />
+                  <Button fx:id="fixed_money" layoutX="385.0" layoutY="218.0" mnemonicParsing="false" onAction="#onBtn_fixed_money" prefHeight="25.0" prefWidth="143.0" text="固定返済金額設定" />
+                  <Text layoutX="190.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
+                     <font>
+                        <Font size="31.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="534.0" layoutY="218.0">
+                     <image>
+                        <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="348.0" prefWidth="809.0">
+               <children>
+                  <TableView fx:id="repayment_balance" layoutX="-1.0" layoutY="28.0" prefHeight="268.0" prefWidth="845.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <columns>
+                        <TableColumn fx:id="loan_date" prefWidth="112.0" text="日時" />
+                        <TableColumn fx:id="repaid_amount" prefWidth="211.0" text="返済額" />
+                        <TableColumn fx:id="deposit_amount" prefWidth="235.0" text="口座入金額" />
+                        <TableColumn fx:id="balance" prefWidth="286.0" text="口座残高" />
+                     </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </items>
+      </SplitPane>
+   </children>
+</AnchorPane>
