--- a/kan's_log_system/src/application/Mainmenu.fxml
+++ b/kan's_log_system/src/application/Mainmenu.fxml
@@ -1,19 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="424.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
-	<children>
-		<ImageView fitHeight="45.0" fitWidth="49.0" layoutX="266.0" layoutY="162.0" onMouseClicked="#onButtonLoan" pickOnBounds="true" preserveRatio="true">
-			<image>
-				<Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
-			</image>
+<AnchorPane prefHeight="430.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+   <children>
+      <AnchorPane layoutX="173.0" layoutY="3.0" prefHeight="430.0" prefWidth="529.0">
          <effect>
-            <Glow />
+            <DropShadow />
          </effect>
-		</ImageView>
-	</children>
-</Pane>
+         <children>
+            <Pane fx:id="pane_top" prefHeight="622.0" prefWidth="847.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="625.0" prefWidth="171.0" style="-fx-background-color: #F0F7FF;">
+         <children>
+            <AnchorPane prefHeight="625.0" prefWidth="45.0" style="-fx-background-color: #FFFF;">
+               <effect>
+                  <DropShadow />
+               </effect>
+            </AnchorPane>
+            <ImageView layoutX="11.0" layoutY="136.0">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_fire_24px_2.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="28.0" fitWidth="26.0" layoutX="10.0" layoutY="182.0">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_movie_50px_1.png" />
+               </image>
+            </ImageView>
+            <ImageView layoutX="10.0" layoutY="234.0">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_book_26px_1.png" />
+               </image>
+            </ImageView>
+            <ImageView layoutX="10.0" layoutY="286.0">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_account_26px.png" />
+               </image>
+            </ImageView>
+            <ImageView layoutX="10.0" layoutY="86.0">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_up_24px.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="btn_top" layoutX="45.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Top" />
+            <Button fx:id="btn_book" layoutX="45.0" layoutY="235.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Book" />
+            <Button fx:id="btn_loan" layoutX="45.0" layoutY="136.0" mnemonicParsing="false" onAction="#onButtonLoan" prefHeight="25.0" prefWidth="126.0" text="Loan" />
+            <Button fx:id="btn_movie" layoutX="45.0" layoutY="184.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Movie" />
+            <Button fx:id="btn_account" layoutX="45.0" layoutY="287.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Account" />
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </AnchorPane>
+   </children>
+</AnchorPane>
