--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoanController">
+<AnchorPane fx:id="loanpane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoanController">
    <children>
       <SplitPane dividerPositions="0.5629032258064516" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="622.0" prefWidth="847.0">
          <items>
@@ -65,7 +65,7 @@
                         <Font size="31.0" />
                      </font>
                   </Text>
-                  <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="534.0" layoutY="218.0">
+                  <ImageView fx:id="loanConf" fitHeight="25.0" fitWidth="26.0" layoutX="534.0" layoutY="218.0" onMouseClicked="#onBtnloanconf">
                      <image>
                         <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
                      </image>
