--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -31,12 +31,12 @@
                         <Font size="46.0" />
                      </font>
                   </Text>
-                  <Button fx:id="btn_repayment" layoutX="437.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_reoayment" text="登録" />
+                  <Button fx:id="btn_repayment" layoutX="397.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_reoayment" text="登録" />
                   <ChoiceBox fx:id="loan_year" layoutX="235.0" layoutY="217.0" prefHeight="26.0" prefWidth="58.0" />
                   <ChoiceBox fx:id="loan_month" layoutX="317.0" layoutY="217.0" prefHeight="26.0" prefWidth="40.0" />
                   <Text layoutX="298.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
                   <Text layoutX="361.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
-                  <Button fx:id="delete" layoutX="488.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_delete" text="取消" />
+                  <Button fx:id="delete" layoutX="448.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_delete" text="取消" />
                   <Text layoutX="235.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
                   <ImageView layoutX="209.0" layoutY="24.0">
                      <image>
@@ -70,6 +70,7 @@
                         <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
                      </image>
                   </ImageView>
+                  <Button layoutX="500.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_delete_row" text="削除" />
                </children>
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="348.0" prefWidth="809.0">
