--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -14,78 +13,79 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="loanpane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoanController">
+<AnchorPane fx:id="loanpane" prefHeight="633.0" prefWidth="935.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoanController">
    <children>
-      <SplitPane dividerPositions="0.5629032258064516" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="622.0" prefWidth="847.0">
-         <items>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="331.0" prefWidth="812.0">
-               <children>
-                  <TextField id="txtfieldMoney" fx:id="money" layoutX="235.0" layoutY="250.0" onKeyPressed="#onKyPrsMoney" prefHeight="39.0" prefWidth="295.0" />
-                  <Text layoutX="147.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" wrappingWidth="43.268795013427734">
-                     <font>
-                        <Font size="62.0" />
-                     </font>
-                  </Text>
-                  <Text layoutX="253.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Loan balance">
-                     <font>
-                        <Font size="46.0" />
-                     </font>
-                  </Text>
-                  <Button fx:id="btn_repayment" layoutX="397.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_reoayment" text="登録" />
-                  <ChoiceBox fx:id="loan_year" layoutX="235.0" layoutY="217.0" prefHeight="26.0" prefWidth="58.0" />
-                  <ChoiceBox fx:id="loan_month" layoutX="317.0" layoutY="217.0" prefHeight="26.0" prefWidth="40.0" />
-                  <Text layoutX="298.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
-                  <Text layoutX="361.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
-                  <Button fx:id="delete" layoutX="448.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_delete" text="取消" />
-                  <Text layoutX="235.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
-                  <ImageView layoutX="209.0" layoutY="24.0">
-                     <image>
-                        <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
-                     </image>
-                  </ImageView>
-                  <Text fx:id="debt_balance" layoutX="226.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="text" textAlignment="CENTER" wrappingWidth="320.857421875">
-                     <font>
-                        <Font size="46.0" />
-                     </font>
-                  </Text>
-                  <Text fx:id="lst_balance" layoutX="320.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" text="txt" textAlignment="CENTER" wrappingWidth="234.97069704532623">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </Text>
-                  <RadioButton fx:id="radiopay" layoutX="540.0" layoutY="249.0" mnemonicParsing="false" onAction="#onAct_radiopay" selected="true" text="返済">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="group" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <RadioButton fx:id="radiodepo" layoutX="540.0" layoutY="271.0" mnemonicParsing="false" onAction="#onAct_radiodepo" text="口座入金" toggleGroup="$group" />
-                  <Button fx:id="fixed_money" layoutX="385.0" layoutY="218.0" mnemonicParsing="false" onAction="#onBtn_fixed_money" prefHeight="25.0" prefWidth="143.0" text="固定返済金額設定" />
-                  <Text layoutX="190.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
-                     <font>
-                        <Font size="31.0" />
-                     </font>
-                  </Text>
-                  <ImageView fx:id="loanConf" fitHeight="25.0" fitWidth="26.0" layoutX="534.0" layoutY="218.0" onMouseClicked="#onBtnloanconf">
-                     <image>
-                        <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
-                     </image>
-                  </ImageView>
-                  <Button layoutX="500.0" layoutY="295.0" mnemonicParsing="false" onAction="#onBtn_delete_row" text="削除" />
-               </children>
-            </AnchorPane>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="348.0" prefWidth="809.0">
-               <children>
-                  <TableView fx:id="repayment_balance" layoutX="-1.0" layoutY="28.0" prefHeight="268.0" prefWidth="845.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <columns>
-                        <TableColumn fx:id="loan_date" prefWidth="112.0" text="日時" />
-                        <TableColumn fx:id="repaid_amount" prefWidth="211.0" text="返済額" />
-                        <TableColumn fx:id="deposit_amount" prefWidth="235.0" text="口座入金額" />
-                        <TableColumn fx:id="balance" prefWidth="286.0" text="口座残高" />
-                     </columns>
-                  </TableView>
-               </children>
-            </AnchorPane>
-         </items>
-      </SplitPane>
+      <AnchorPane layoutX="-2.0" prefHeight="82.0" prefWidth="1112.0">
+         <children>
+            <Text layoutX="56.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Loan balance" wrappingWidth="1037.970703125">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
+            <ImageView layoutX="23.0" layoutY="33.0">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_fire_26px.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="3.0" layoutY="106.0" prefHeight="477.0" prefWidth="423.0">
+         <children>
+            <Button fx:id="delete" layoutX="124.0" layoutY="261.0" mnemonicParsing="false" onAction="#onBtn_delete" text="取消" />
+            <TextField id="txtfieldMoney" fx:id="money" layoutX="69.0" layoutY="192.0" onKeyPressed="#onKyPrsMoney" prefHeight="25.0" prefWidth="266.0" />
+            <Text fx:id="lst_balance" layoutX="101.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="txt" textAlignment="CENTER" wrappingWidth="218.97069704532623">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Text>
+            <Text layoutX="18.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Text>
+            <Text fx:id="debt_balance" layoutX="49.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="text" textAlignment="CENTER" wrappingWidth="320.857421875">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Text>
+            <Button fx:id="btn_repayment" layoutX="71.0" layoutY="261.0" mnemonicParsing="false" onAction="#onBtn_reoayment" text="登録" />
+            <ChoiceBox fx:id="loan_year" layoutX="71.0" layoutY="159.0" prefHeight="26.0" prefWidth="58.0" />
+            <ChoiceBox fx:id="loan_month" layoutX="159.0" layoutY="160.0" prefHeight="26.0" prefWidth="40.0" />
+            <Text layoutX="138.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="年" />
+            <Text layoutX="209.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="月" />
+            <Text layoutX="63.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="口座残高" textAlignment="CENTER" wrappingWidth="79.26879501342773" />
+            <RadioButton fx:id="radiopay" layoutX="236.0" layoutY="226.0" mnemonicParsing="false" onAction="#onAct_radiopay" selected="true" text="返済">
+               <toggleGroup>
+                  <ToggleGroup fx:id="group" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="radiodepo" layoutX="236.0" layoutY="247.0" mnemonicParsing="false" onAction="#onAct_radiodepo" text="口座入金" toggleGroup="$group" />
+            <Button fx:id="fixed_money" layoutX="70.0" layoutY="222.0" mnemonicParsing="false" onAction="#onBtn_fixed_money" prefHeight="25.0" prefWidth="140.0" text="固定返済金額設定" />
+            <Text layoutX="68.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥" textAlignment="CENTER" wrappingWidth="43.268795013427734">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <ImageView fx:id="loanConf" fitHeight="25.0" fitWidth="26.0" layoutX="343.0" layoutY="192.0" onMouseClicked="#onBtnloanconf">
+               <image>
+                  <Image url="@../../../../../AppData/Local/Temp/icons8_settings_50px.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="406.0" layoutY="78.0" prefHeight="533.0" prefWidth="724.0">
+         <children>
+            <Button layoutX="649.0" layoutY="507.0" mnemonicParsing="false" onAction="#onBtn_delete_row" prefHeight="25.0" prefWidth="58.0" text="削除" />
+            <TableView fx:id="repayment_balance" layoutX="24.0" layoutY="49.0" prefHeight="455.0" prefWidth="683.0">
+               <columns>
+                  <TableColumn fx:id="loan_date" prefWidth="108.0" text="日時" />
+                  <TableColumn fx:id="repaid_amount" prefWidth="192.0" text="返済額" />
+                  <TableColumn fx:id="deposit_amount" prefWidth="129.0" text="口座入金額" />
+                  <TableColumn fx:id="balance" prefWidth="252.0" text="口座残高" />
+               </columns>
+            </TableView>
+            <Text layoutX="28.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="返済金・口座入金履歴" wrappingWidth="129.26879501342773" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
