--- a/kan's_log_system/src/application/Movie.fxml
+++ b/kan's_log_system/src/application/Movie.fxml
@@ -23,7 +23,7 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <ScrollPane layoutX="-1.0" layoutY="153.0" prefHeight="480.0" prefWidth="1128.0" />
+      <ScrollPane fx:id="movieScrPane" layoutX="-1.0" layoutY="153.0" prefHeight="480.0" prefWidth="1128.0" />
       <Text fx:id="movie_year" layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="movie_year" textAlignment="CENTER" wrappingWidth="77.33669662475586" />
    </children>
 </AnchorPane>
