--- a/kan's_log_system/src/application/Movie.fxml
+++ b/kan's_log_system/src/application/Movie.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -23,7 +25,17 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <ScrollPane fx:id="movieScrPane" layoutX="-1.0" layoutY="153.0" prefHeight="480.0" prefWidth="1128.0" />
+      <ScrollPane fx:id="movieScrPane" layoutX="-1.0" layoutY="153.0" prefHeight="480.0" prefWidth="1128.0">
+         <content>
+            <FlowPane fx:id="movieFlowPane" hgap="10.0" prefHeight="478.0" prefWidth="1127.0" vgap="10.0">
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </FlowPane>
+         </content></ScrollPane>
       <Text fx:id="movie_year" layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="movie_year" textAlignment="CENTER" wrappingWidth="77.33669662475586" />
    </children>
 </AnchorPane>
