--- a/kan's_log_system/src/application/Movieadd.fxml
+++ b/kan's_log_system/src/application/Movieadd.fxml
@@ -15,7 +15,7 @@
       <AnchorPane layoutX="-2.0" prefHeight="82.0" prefWidth="1130.0" style="-fx-background-color: #F0F7FF;" />
       <ImageView fx:id="addImageMovie" fitHeight="314.0" fitWidth="264.0" layoutX="35.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/image_file_24px.png" />
+            <Image url="application/image_file_24px.png" />
          </image>
       </ImageView>
       <Label layoutX="381.0" layoutY="153.0" prefHeight="18.0" prefWidth="111.0" text="タイトル" />
@@ -39,22 +39,22 @@
       <ImageView fx:id="regImageMovie" fitHeight="314.0" fitWidth="222.0" layoutX="35.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ImageView fx:id="upEval" fitHeight="25.0" fitWidth="26.0" layoutX="696.0" layoutY="406.0" onMouseClicked="#onUpEval" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="dwEval" fitHeight="25.0" fitWidth="26.0" layoutX="500.0" layoutY="406.0" onMouseClicked="#onDwEval" pickOnBounds="true" preserveRatio="true" rotate="180.0" visible="false">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="upPop" fitHeight="25.0" fitWidth="26.0" layoutX="696.0" layoutY="455.0" onMouseClicked="#onUpPop" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="dwPop" fitHeight="25.0" fitWidth="26.0" layoutX="500.0" layoutY="455.0" onMouseClicked="#onDwPop" pickOnBounds="true" preserveRatio="true" rotate="180.0" visible="false">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <Button fx:id="btnReg" layoutX="688.0" layoutY="512.0" mnemonicParsing="false" onAction="#onBtnReg" text="登録" />
