--- a/kan's_log_system/src/application/Book.fxml
+++ b/kan's_log_system/src/application/Book.fxml
@@ -25,7 +25,7 @@
             </Text>
             <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="23.0" layoutY="33.0">
                <image>
-                  <Image url="@image/book_26px.png" />
+                  <Image url="application/book_26px.png" />
                </image>
             </ImageView>
          </children>
@@ -54,7 +54,7 @@
       <HTMLEditor fx:id="bookTopicEdit" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="416.0" layoutY="122.0" prefHeight="475.0" prefWidth="686.0" visible="false" />
       <ImageView fx:id="bookEdit" fitHeight="25.0" fitWidth="20.0" layoutX="417.0" layoutY="92.0" onMouseClicked="#onBookEdit" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
-            <Image url="@image/edit_24px.png" />
+            <Image url="application/edit_24px.png" />
          </image>
       </ImageView>
       <TextField fx:id="regBookTitle" layoutX="171.0" layoutY="126.0" visible="false" />
