--- a/kan's_log_system/src/application/Loan.fxml
+++ b/kan's_log_system/src/application/Loan.fxml
@@ -24,7 +24,7 @@
             </Text>
             <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="23.0" layoutY="33.0">
                <image>
-                  <Image url="@image/fire_50px.png" />
+                  <Image url="application/fire_50px.png" />
                </image>
             </ImageView>
          </children>
@@ -68,7 +68,7 @@
             </Text>
             <ImageView fx:id="loanConf" fitHeight="25.0" fitWidth="26.0" layoutX="343.0" layoutY="192.0" onMouseClicked="#onBtnloanconf">
                <image>
-                  <Image url="@image/settings_50px.png" />
+                  <Image url="application/settings_50px.png" />
                </image>
             </ImageView>
             <Text layoutX="27.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="返済金残高" wrappingWidth="146.86883163452148" />
