--- a/kan's_log_system/src/application/Movie.fxml
+++ b/kan's_log_system/src/application/Movie.fxml
@@ -20,7 +20,7 @@
             </Text>
             <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="23.0" layoutY="33.0">
                <image>
-                  <Image url="@image/movie_50px.png" />
+                  <Image url="application/movie_50px.png" />
                </image>
             </ImageView>
          </children>
@@ -42,17 +42,17 @@
          </font></Text>
       <ImageView fx:id="btnMovieYearBk" fitHeight="20.0" fitWidth="26.0" layoutX="155.0" layoutY="121.0" onMouseClicked="#onBtnMovieYearBk" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnMovieYearFr" fitHeight="20.0" fitWidth="26.0" layoutX="26.0" layoutY="121.0" onMouseClicked="#onBtnMovieYearFr" pickOnBounds="true" preserveRatio="true" rotate="180.0" visible="false">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="addMovie" fitHeight="20.0" fitWidth="20.0" layoutX="186.0" layoutY="121.0" onMouseClicked="#onAddMovie" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/add_50px.png" />
+            <Image url="application/add_50px.png" />
          </image>
       </ImageView>
       <Text fx:id="txtMovieCnt" layoutX="260.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="100" textAlignment="CENTER">
