--- a/kan's_log_system/src/application/Moviedetail.fxml
+++ b/kan's_log_system/src/application/Moviedetail.fxml
@@ -23,7 +23,7 @@
             </Text>
             <ImageView fitHeight="25.0" fitWidth="26.0" layoutX="23.0" layoutY="33.0">
                <image>
-                  <Image url="@image/movie_50px.png" />
+                  <Image url="application/movie_50px.png" />
                </image>
             </ImageView>
          </children>
@@ -49,7 +49,7 @@
       <Text fx:id="txtMovieTime" layoutX="541.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="time" wrappingWidth="186.11174467727642" />
       <ImageView fx:id="btnBackMovie" fitHeight="27.0" fitWidth="26.0" layoutX="35.0" layoutY="113.0" onMouseClicked="#onMouseBtnBackMovie" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/back_arrow_32px.png" />
+            <Image url="application/back_arrow_32px.png" />
          </image>
       </ImageView>
       <HBox fx:id="hBoxMovieEval" layoutX="534.0" layoutY="401.0" prefHeight="34.0" prefWidth="123.0" />
@@ -65,22 +65,22 @@
       <ImageView fx:id="regImageMovie" fitHeight="314.0" fitWidth="222.0" layoutX="35.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ImageView fx:id="upEval" fitHeight="25.0" fitWidth="26.0" layoutX="696.0" layoutY="406.0" onMouseClicked="#onUpEval" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="dwEval" fitHeight="25.0" fitWidth="26.0" layoutX="500.0" layoutY="406.0" onMouseClicked="#onDwEval" pickOnBounds="true" preserveRatio="true" rotate="180.0" visible="false">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="upPop" fitHeight="25.0" fitWidth="26.0" layoutX="696.0" layoutY="455.0" onMouseClicked="#onUpPop" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="dwPop" fitHeight="25.0" fitWidth="26.0" layoutX="500.0" layoutY="455.0" onMouseClicked="#onDwPop" pickOnBounds="true" preserveRatio="true" rotate="180.0" visible="false">
          <image>
-            <Image url="@image/arrow_24px.png" />
+            <Image url="application/arrow_24px.png" />
          </image>
       </ImageView>
       <Button fx:id="btnReg" layoutX="688.0" layoutY="512.0" mnemonicParsing="false" onAction="#onBtnReg" text="登録" visible="false" />
@@ -88,12 +88,12 @@
       <Button fx:id="btndelete" layoutX="765.0" layoutY="512.0" mnemonicParsing="false" onAction="#onBtndelete" text="削除" visible="false" />
       <ImageView fx:id="btnBackEditMode" fitHeight="27.0" fitWidth="26.0" layoutX="35.0" layoutY="113.0" onMouseClicked="#onMouseBtnBackEditMode" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
-            <Image url="@image/back_arrow_32px.png" />
+            <Image url="application/back_arrow_32px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="btnEditMode" fitHeight="18.0" fitWidth="25.0" layoutX="74.0" layoutY="117.0" onMouseClicked="#onBtnEditMode" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@image/edit_24px.png" />
+            <Image url="application/edit_24px.png" />
          </image>
       </ImageView>
    </children>
